[package]
name = "test-imgui-rs"
version = "0.1.0"
edition = "2021"
repository="https://github.com/tanukimaru0090/test-imgui-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]





imgui = "0.11.0"
imgui-dx9-renderer = { git = "https://github.com/Veykril/imgui-dx9-renderer", version = "0.11.0" }
imgui-winit-support = "0.11.0"
raw-window-handle = "0.6.0"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
] }
winit = { version = "0.29.3", features = ["rwh_05"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
